# fintrack

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-a4821a27a4f2a9662ba6234e4ab77093378c0235e7dc51960e0315ae94766d15.json
src/: lib.rs  main.rs
src/api/: auth.rs  categories.rs  mod.rs  state.rs  transactions.rs  users.rs
src/api/middleware/: auth.rs  mod.rs
src/configuration/: database.rs  mod.rs  rate_limit.rs  settings.rs
src/domain/: category.rs  errors.rs  mod.rs  transaction.rs  user.rs  user_email.rs  user_name.rs
src/models/: mod.rs  requests.rs  responses.rs
src/repositories/: category_repository.rs  mod.rs  transaction_repository.rs  user_repository.rs
src/services/: auth_service.rs  category_service.rs  mod.rs  transaction_service.rs  user_service.rs
src/utils/: jwt.rs  mod.rs  password.rs
