[package]
name = "fintrack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bcrypt = "0.18.0"
unicode-segmentation = "1"
validator = "0.14"

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[profile.dev.package.sqlx-macros]
opt-level = 3

[lib]
path = "src/lib.rs"

[[bin]]
name = "fintrack"
path = "src/main.rs"